first ISI part fixed

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -52,6 +52,18 @@
   timestamp = {2017.06.15},
 }
 
+@InCollection{Al-kazemi2005,
+  author    = {Al-kazemi, B. and Mohan, C. K.},
+  title     = {Discrete Multi-Phase Particle Swarm Optimization},
+  booktitle = {Information Processing with Evolutionary Algorithms},
+  year      = {2005},
+  pages     = {305-327},
+  doi       = {10.1007/1-84628-117-2_20},
+  file      = {:Discrete Multi-Phase Particle Swarm Optimization.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.22},
+}
+
 @Article{Almendral2010,
   author        = {Almendral, J. A. and Leyva, I. and Li, D. and Sendiña–Nadal, I. and Havlin, S. and Boccaletti, S.},
   title         = {Dynamics of overlapping structures in modular networks},
@@ -290,6 +302,19 @@
   timestamp = {2011.06.02},
 }
 
+@InCollection{Batagelj2004a,
+  author    = {Batagelj, V. and Mrvar, A.},
+  title     = {Pajek — Analysis and Visualization of Large Networks},
+  booktitle = {Graph Drawing Software},
+  year      = {2004},
+  series    = {Mathematics and Visualization},
+  pages     = {77-103},
+  doi       = {10.1007/978-3-642-18638-7_4},
+  file      = {:Pajek - Analysis and Visualization of Large Networks.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.23},
+}
+
 @TechReport{Becker2005,
   author      = {Becker, H.},
   title       = {A Survey of Correlation Clustering},
@@ -397,7 +422,8 @@
   title     = {Fast unfolding of communities in large networks},
   journal   = {Journal of Statistical Mechanics},
   year      = {2008},
-  volume    = {10},
+  volume    = {2008},
+  number    = {10},
   pages     = {P10008},
   doi       = {10.1088/1742-5468/2008/10/P10008},
   file      = {:Fast unfolding of communities in large networks.pdf:PDF},
@@ -441,6 +467,20 @@
   file      = {:Structural similarity- Spectral methods for relaxed blockmodeling.pdf:PDF},
   owner     = {Vincent},
   timestamp = {2017.04.08},
+}
+
+@Article{Bron1973a,
+  author    = {Bron, C. and Kerbosch, J.},
+  title     = {Algorithm 457: finding all cliques of an undirected graph},
+  journal   = {Communications of the ACM},
+  year      = {1973},
+  volume    = {16},
+  number    = {9},
+  pages     = {575-577},
+  doi       = {10.1145/362342.362367},
+  file      = {:Algorithm 457- finding all cliques of an undirected graph.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.23},
 }
 
 @Article{Bruggeman2012,
@@ -594,7 +634,8 @@
   title     = {Overlapping community detection in networks with positive and negative links},
   journal   = {Journal of Statistical Mechanics},
   year      = {2014},
-  volume    = {03},
+  volume    = {2014},
+  number    = {3},
   pages     = {P03021},
   doi       = {10.1088/1742-5468/2014/03/P03021},
   file      = {:Overlapping community detection in networks with positive and negative links.pdf:PDF},
@@ -718,6 +759,16 @@
   owner     = {Vincent},
   timestamp = {2016.10.31},
   url       = {http://dl.acm.org/citation.cfm?id=2638573},
+}
+
+@Book{Clerc2006,
+  title     = {Particle Swarm Optimization},
+  publisher = {Wiley-ISTE},
+  year      = {2006},
+  author    = {Clerc, M.},
+  owner     = {Vincent},
+  timestamp = {2017.06.23},
+  url       = {http://eu.wiley.com/WileyCDA/WileyTitle/productCd-1905209045.html},
 }
 
 @Article{Cohen1960,
@@ -1179,6 +1230,19 @@
   timestamp     = {2017.04.20},
 }
 
+@InCollection{Ferligoj1994,
+  author    = {Ferligoj, A. and Batagelj, V. and Doreian, P.},
+  title     = {On Connecting Network Analysis and Cluster Analysis},
+  booktitle = {Contributions to Mathematical Psychology, Psychometrics, and Methodology},
+  year      = {1994},
+  series    = {Recent Research in Psychology},
+  pages     = {329-344},
+  doi       = {10.1007/978-1-4612-4308-3_24},
+  file      = {:On Connecting Network Analysis and Cluster Analysis.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.22},
+}
+
 @Article{Figueiredo2013,
   author    = {Figueiredo, R. and Moura, G.},
   title     = {Mixed integer programming formulations for clustering problems related to structural balance},
@@ -1205,6 +1269,20 @@
   file      = {:The maximum balanced subgraph of a signed graph- Applications and solution approaches.pdf:PDF},
   owner     = {Vincent},
   timestamp = {2017.06.18},
+}
+
+@Article{Fisher1936,
+  author    = {Fisher, R. A.},
+  title     = {The Use of Multiple Measurements in Taxonomic Problems},
+  journal   = {Annals of Human Genetics},
+  year      = {1936},
+  volume    = {7},
+  number    = {2},
+  pages     = {179-188},
+  doi       = {10.1111/j.1469-1809.1936.tb02137.x},
+  file      = {:The Use of Multiple Measurements in Taxonomic Problems.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.23},
 }
 
 @InProceedings{Gael2007,
@@ -1355,14 +1433,13 @@
 @Article{Giscard2017,
   author    = {Giscard, P.-L. and Rochet, P. and Wilson, R. C.},
   title     = {Evaluating balance on social networks from their simple cycles},
-  journal   = {arXiv},
+  journal   = {Journal of Complex Networks},
   year      = {2017},
-  volume    = {cs.SI},
-  pages     = {1606.03347},
+  pages     = {cnx005},
+  doi       = {10.1093/comnet/cnx005},
   file      = {:Evaluating balance on social networks from their simple cycles.pdf:PDF},
   owner     = {Vincent},
   timestamp = {2017.04.17},
-  url       = {https://arxiv.org/abs/1606.03347},
 }
 
 @Article{Gomez2009,
@@ -1437,7 +1514,8 @@
   title     = {Cartography of complex networks: modules and universal roles},
   journal   = {Journal of Statistical Mechanics},
   year      = {2005},
-  volume    = {02},
+  volume    = {2005},
+  number    = {2},
   pages     = {P02001},
   doi       = {10.1088/1742-5468/2005/02/P02001},
   file      = {:Cartography of complex networks- modules and universal roles.pdf:PDF},
@@ -1668,6 +1746,7 @@
   journal   = {Journal of Statistical Mechanics},
   year      = {2008},
   volume    = {2008},
+  number    = {8},
   pages     = {P08007},
   doi       = {10.1088/1742-5468/2008/08/P08007},
   file      = {:Detecting modules in dense weighted networks with the Potts method.pdf:PDF},
@@ -2135,6 +2214,21 @@
   owner     = {Vincent},
   timestamp = {2015.09.18},
   url       = {http://arxiv.org/abs/1402.6865},
+}
+
+@Article{Lange2015,
+  author        = {Lange, C. and Liu, S. and Peyerimhoff, N. and Post, O.},
+  title         = {Frustration index and Cheeger inequalities for discrete and continuous magnetic Laplacians},
+  journal       = {Calculus of variations and partial differential equations},
+  year          = {2015},
+  volume        = {54},
+  number        = {4},
+  pages         = {4165-4196},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1007/s00526-015-0935-x},
+  file          = {:Frustration index and Cheeger inequalities for discrete and continuous magnetic Laplacians.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.06.23},
 }
 
 @InProceedings{Larusso2010,
@@ -2685,6 +2779,20 @@
   file      = {:Making data sharing work- The FCP-INDI experience.pdf:PDF},
   owner     = {Vincent},
   timestamp = {2017.05.04},
+}
+
+@Article{Meunier2010,
+  author        = {Meunier, D. and Lambiotte, R. and Bullmore, E. T.},
+  title         = {Modular and hierarchically modular organization of brain networks},
+  journal       = {Frontiers in Neurosciences},
+  year          = {2010},
+  volume        = {4},
+  pages         = {200},
+  __markedentry = {[Vincent:]},
+  doi           = {10.3389/fnins.2010.00200},
+  file          = {:Modular and hierarchically modular organization of brain networks.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.06.25},
 }
 
 @Article{Milo2002,
@@ -3292,6 +3400,18 @@
   owner         = {Vincent},
   timestamp     = {2017.05.10},
   url           = {https://arxiv.org/abs/1601.05403},
+}
+
+@InProceedings{Selee2007,
+  author    = {Selee, T. M. and Kolda, T. and Kegelmeyer, W. P. and Griffin, J. D.},
+  title     = {Extracting Clusters from Large Datasets with Multiple Similarity Measures},
+  booktitle = {CSRI Summer Proceedings},
+  year      = {2007},
+  pages     = {87-103},
+  file      = {:Multilinear algebra for analyzing data with multiple linkages.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.23},
+  url       = {http://www.sandia.gov/~mlparks/papers/CSRI2007.pdf},
 }
 
 @InProceedings{Shahriari2015,
@@ -4171,6 +4291,21 @@
   timestamp     = {2017.05.08},
 }
 
+@Article{Zajonc1965,
+  author        = {Zajonc, R. B. and Burnstein, E.},
+  title         = {Structural balance, reciprocity, and positivity as sources of cognitive bias},
+  journal       = {Journal of Personality},
+  year          = {1965},
+  volume        = {33},
+  number        = {4},
+  pages         = {570-583},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1111/j.1467-6494.1965.tb01403.x},
+  file          = {:Structural balance, reciprocity, and positivity as sources of cognitive bias.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.06.23},
+}
+
 @Article{Zaslavsky1981,
   author    = {Zaslavsky, T.},
   title     = {Characterizations of signed graphs},
@@ -4382,15 +4517,15 @@
 
 @Comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
-1 ExplicitGroup:Graph Partitioning\;0\;Aref2016\;Aref2017\;Arenas2008b\;Aszalos2013\;Aszalos2014\;Aszalos2015\;Aszalos2016\;Barber2007\;Bhatia2008\;Bhattacharya2008\;Blondel2008\;Bonacich2004\;Brandes2010\;Brusco2010\;Brusco2010a\;Chakraborty2014\;Chang2012b\;Chang2017\;Chen2010f\;Chen2014o\;Chen2014r\;Chen2017a\;Chen2017b\;Costa2014a\;Cucuringu2012\;DasGupta2007\;Demaine2003\;Demaine2006\;Doreian2008\;Doreian2013\;Doreian2015\;Drummond2013\;DuBois2009\;Duch2005\;Estrada2014b\;Fenn2009\;Fenn2012\;Figueiredo2014\;Gael2007\;Gallier2015\;Giotis2006\;Girvan2002a\;Giscard2017\;Gong2012\;Gupta2017\;Hassan2012a\;He-Li2015\;Heimo2008\;Hou2005\;Hsieh2012\;Huang2010a\;Huang2011\;Hueffner2010\;Ilev2016\;Jensen2006\;Jordan2013\;Kernighan1970\;Khadivi2010a\;Kim2011a\;Kolluri2004\;Kunegis2015a\;Larusso2010\;Levin2017\;Levorato2015\;Levorato2017a\;Li2008b\;Li2010f\;Li2016r\;Li2016s\;Li2017b\;Li2017c\;Liu2010i\;Lo2011\;Lo2013\;Lu2013\;Luxburg2007\;Ma2014d\;Ma2017a\;MacMahon2013\;Mason2009\;Mucha2010\;Mucha2010a\;Neda2006\;Newman2006\;Newman2006b\;Newman2007a\;Ou2007\;Ozer2016\;Pizzuti2009\;Pons2005\;Qi2016\;Qi2017\;Radicchi2004\;Raghavan2007\;Ren2009\;Richardson2009\;Rosvall2008\;Sedoc2016\;Shahriari2015\;Shahriari2016a\;Shang2017a\;Sharma2009\;Shen2009\;Shen2010\;Shen2011a\;Shen2013g\;Sontag2007\;Sun2014g\;Terzi2011\;Traag2011\;Veldt2016\;Wahid2017\;Wang2013t\;Wu2012\;Wu2012f\;Wu2012g\;Wu2014b\;Wu2015b\;Yang2015f\;Yang2017c\;Yu2003\;Zahn1964\;Zaslavsky2010\;Zhan2016a\;Zhang2010g\;Zhang2013r\;Zhao2017a\;Zhou2015j\;;
+1 ExplicitGroup:Graph Partitioning\;0\;Aref2016\;Aref2017\;Arenas2008b\;Aszalos2013\;Aszalos2014\;Aszalos2015\;Aszalos2016\;Barber2007\;Bhatia2008\;Bhattacharya2008\;Blondel2008\;Bonacich2004\;Brandes2010\;Brusco2010\;Brusco2010a\;Chakraborty2014\;Chang2012b\;Chang2017\;Chen2010f\;Chen2014o\;Chen2014r\;Chen2017a\;Chen2017b\;Costa2014a\;Cucuringu2012\;DasGupta2007\;Demaine2003\;Demaine2006\;Doreian2008\;Doreian2013\;Doreian2015\;Drummond2013\;DuBois2009\;Duch2005\;Estrada2014b\;Fenn2009\;Fenn2012\;Ferligoj1994\;Figueiredo2014\;Gael2007\;Gallier2015\;Giotis2006\;Girvan2002a\;Giscard2017\;Gong2012\;Gupta2017\;Hassan2012a\;He-Li2015\;Heimo2008\;Hou2005\;Hsieh2012\;Huang2010a\;Huang2011\;Hueffner2010\;Ilev2016\;Jensen2006\;Jordan2013\;Kernighan1970\;Khadivi2010a\;Kim2011a\;Kolluri2004\;Kunegis2015a\;Larusso2010\;Levin2017\;Levorato2015\;Levorato2017a\;Li2008b\;Li2010f\;Li2016r\;Li2016s\;Li2017b\;Li2017c\;Liu2010i\;Lo2011\;Lo2013\;Lu2013\;Luxburg2007\;Ma2014d\;Ma2017a\;MacMahon2013\;Mason2009\;Mucha2010\;Mucha2010a\;Neda2006\;Newman2006\;Newman2006b\;Newman2007a\;Ou2007\;Ozer2016\;Pizzuti2009\;Pons2005\;Qi2016\;Qi2017\;Radicchi2004\;Raghavan2007\;Ren2009\;Richardson2009\;Rosvall2008\;Sedoc2016\;Shahriari2015\;Shahriari2016a\;Shang2017a\;Sharma2009\;Shen2009\;Shen2010\;Shen2011a\;Shen2013g\;Sontag2007\;Sun2014g\;Terzi2011\;Traag2011\;Veldt2016\;Wahid2017\;Wang2013t\;Wu2012\;Wu2012f\;Wu2012g\;Wu2014b\;Wu2015b\;Yang2015f\;Yang2017c\;Yu2003\;Zahn1964\;Zaslavsky2010\;Zhan2016a\;Zhang2010g\;Zhang2013r\;Zhao2017a\;Zhou2015j\;;
 1 ExplicitGroup:Datasets\;0\;Adamic2005\;Bales1970\;Biswal2010\;Brandes2010\;Costanzo2001\;Ghosn2004\;Hogg2008\;Krebs2002\;Kunegis2013a\;Lemann1952\;Leskovec2010d\;Leskovec2014\;Lusseau2003a\;Maniu2011a\;Massa2004\;Massa2005\;Massa2007\;Mennes2013\;Milo2002\;Neal2014\;Newcomb1961\;Oda2004\;Oda2005\;Poole2011\;Salgado2006\;Sampson1968\;Shwed2010\;Tang2015b\;VanEssen2012\;Viswanath2009\;Voeten2013\;West2014\;Yang2012g\;Zachary1977\;;
-1 ExplicitGroup:Others\;0\;Ahmadizadeh2017\;Almendral2010\;Antal2006\;Belardo2014\;Belardo2016\;Belaza2017\;Chen2017d\;Chiang2014\;Cohen1960\;Costantini2014\;DeParle2005\;Doreian2004\;Galam1996\;Gawronski2005\;Gawronski2005a\;Goodman1954\;Guimera2005\;Hage1983a\;Harary1957\;Harary2002\;Hou2005\;Huang2011\;Jalili2017\;Jordan2013\;Kaur2015\;Kulakowski2005\;Kunegis2013\;Li2015v\;Lijphart1963\;Lu2010\;Ludwig2009\;Marvel2011\;Molloy1995\;Moscato1989\;Murtagh1983\;Newman2006\;Newman2006b\;Pelino2012\;Reichardt2006\;Resendel2005\;Rovira-Asenjo2013\;Shahriari2016c\;Shahriary2015\;Shames2014\;Szell2010\;Szella2010\;Tan2016\;Tang2012c\;Traag2013a\;Uitermark2012\;VanderWeele2010\;William2010\;Xiang2015b\;Zaslavsky1981\;Zaslavsky1982\;Zaslavsky1998\;Zaslavsky2008\;Zhang2013s\;Zhang2014w\;;
-1 ExplicitGroup:Just balance\;0\;Akiyama1981\;Antal2005\;Beigi2016\;Deng2012a\;DevadasAcharya1980\;Doreian2017\;Easley2010a\;ElMaftouhi2012\;Facchetti2012\;Harary1953\;Harary1955\;Harary1960\;Harary1968\;Harary1979\;Harary1980\;Heider1944\;Heider1946\;Inohara2002\;Inohara2002a\;Khanafiah2004\;Kulakowski2007\;Leskovec2010b\;Maayan2008\;Marvel2009\;Norman1972\;Rijt2011\;Schwartz2010\;Srinivasan2011\;Szella2010\;Taylor1967\;Teixeira2017\;Tomescu1973\;Zheng2015b\;;
+1 ExplicitGroup:Others\;0\;Ahmadizadeh2017\;Al-kazemi2005\;Almendral2010\;Antal2006\;Batagelj2004a\;Belardo2014\;Belardo2016\;Belaza2017\;Bron1973a\;Chen2017d\;Chiang2014\;Clerc2006\;Cohen1960\;Costantini2014\;Doreian2004\;Fisher1936\;Galam1996\;Gawronski2005\;Gawronski2005a\;Goodman1954\;Guimera2005\;Hage1983a\;Harary1957\;Harary2002\;Hou2005\;Huang2011\;Jalili2017\;Jordan2013\;Kaur2015\;Kulakowski2005\;Kunegis2013\;Li2015v\;Lijphart1963\;Lu2010\;Ludwig2009\;Marvel2011\;Meunier2010\;Molloy1995\;Moscato1989\;Murtagh1983\;Newman2006\;Newman2006b\;Pelino2012\;Reichardt2006\;Resendel2005\;Rovira-Asenjo2013\;Selee2007\;Shahriari2016c\;Shahriary2015\;Shames2014\;Szell2010\;Szella2010\;Tan2016\;Tang2012c\;Traag2013a\;Uitermark2012\;VanderWeele2010\;William2010\;Xiang2015b\;Zaslavsky1981\;Zaslavsky1982\;Zaslavsky1998\;Zaslavsky2008\;Zhang2013s\;Zhang2014w\;;
+1 ExplicitGroup:Just balance\;0\;Akiyama1981\;Antal2005\;Beigi2016\;Deng2012a\;DevadasAcharya1980\;Doreian2017\;Easley2010a\;ElMaftouhi2012\;Facchetti2012\;Harary1953\;Harary1955\;Harary1960\;Harary1968\;Harary1979\;Harary1980\;Heider1944\;Heider1946\;Inohara2002\;Inohara2002a\;Khanafiah2004\;Kulakowski2007\;Leskovec2010b\;Maayan2008\;Marvel2009\;Norman1972\;Rijt2011\;Schwartz2010\;Srinivasan2011\;Szella2010\;Taylor1967\;Teixeira2017\;Tomescu1973\;Zajonc1965\;Zheng2015b\;;
 1 ExplicitGroup:_Biblionet\;2\;;
 2 ExplicitGroup:_To do\;0\;Aref2017\;Aszalos2013\;Aszalos2014\;Aszalos2015\;Aszalos2016\;Bansal2002\;Bansal2004\;Becker2005\;Beigi2016\;Bhattacharya2008\;Chen2010f\;DasGupta2007\;Demaine2003\;Doreian2004\;Doreian2015\;Figueiredo2014\;Gael2007\;Giscard2017\;Gupta2017\;Hage1983a\;Harary1979\;Heimo2008\;Huang2010a\;Hueffner2010\;Ilev2016\;Inohara2002\;Inohara2002a\;Jordan2013\;Kim2011a\;Larusso2010\;Lemann1952\;Levin2017\;Levorato2017a\;Li2017b\;Li2017c\;Ma2015a\;Ma2017a\;Maayan2008\;MacMahon2013\;Marvel2009\;Puleo2015\;Schwartz2010\;Shang2017a\;Shen2010\;Sontag2007\;Tan2016\;Tang2015a\;Teixeira2017\;Veldt2016\;Yang2017c\;Zhan2016a\;Zheng2015b\;;
 2 ExplicitGroup:Found\;0\;Ahmadizadeh2017\;Amelio2013\;Amelio2016\;Anchuri2012\;Bonacich2004\;Bruggeman2012\;Brusco2010\;Brusco2010a\;Cai2014b\;Cai2015b\;Chang2012b\;Chang2013b\;Chen2014e\;Chen2015h\;Chen2015i\;Chiang2014\;Demaine2006\;Doreian1996\;Doreian2008\;Doreian2009\;Doreian2013\;Drummond2013\;Esmailian2014\;Esmailian2015\;Facchetti2011\;Fang2016\;Figueiredo2013\;GalOnHarel2015\;Gao2015\;Gawronski2015\;Giotis2006\;Gomez2009\;Gong2013b\;Granell2011a\;Hou2005\;Iacono2010\;Jensen2006\;Jiang2015\;Levorato2015\;Li2013g\;Li2015o\;Liu2014d\;Lo2013\;Macon2012\;Mrvar2009\;Mucha2010\;Mucha2010a\;Neda2006\;Qi2016\;Rubinov2011\;Shahriari2015a\;Sharma2009\;Sharma2012a\;Shen2011a\;Sun2014g\;Terzi2011\;Traag2009\;Wu2011g\;Wu2015f\;Yang2006b\;Yang2007\;Yang2007c\;Zeng2015\;Zhang2013r\;Zhao2017a\;Zhou2015j\;;
 2 ExplicitGroup:Not Found\;0\;Anchuri2011\;Aref2016\;Bogdanov2010\;Chang2017\;Chen2014r\;Chen2017a\;Chen2017b\;Chiang2012\;Cucuringu2013\;Doreian2005\;Gallier2015\;Guo2015c\;Harary1980\;Hassan2012a\;Hsieh2012\;Hu2017\;Kaplan2008\;Kunegis2010\;Kunegis2015a\;Li2010f\;Li2016r\;Li2016s\;Lo2011\;Ma2014d\;Murata2017\;Qi2017\;Santamaria2015\;Sedoc2016\;Shahriari2016a\;Sharma2015\;Shen2013g\;Traag2014\;Wahid2017\;Wu2012f\;Xue2014\;Yan2014\;Yang2015f\;Zaslavsky2010\;Zhang2010g\;;
-2 ExplicitGroup:Ignored\;0\;Adamic2005\;Ahmadizadeh2017\;Akiyama1981\;Almendral2010\;Antal2005\;Antal2006\;Arenas2008b\;Bales1970\;Barber2007\;Belardo2014\;Belardo2016\;Belaza2017\;Bhatia2008\;Biswal2010\;Blondel2008\;Brandes2010\;Cartwright1956\;Chakraborty2014\;Chen2014o\;Chen2017d\;Cohen1960\;Costa2014a\;Costantini2014\;Costanzo2001\;Cucuringu2012\;Davis1967\;DeParle2005\;Deng2012a\;DevadasAcharya1980\;Doreian2017\;DuBois2009\;Duch2005\;Easley2010a\;ElMaftouhi2012\;Estrada2014b\;Facchetti2012\;Fenn2009\;Fenn2012\;Galam1996\;Gawronski2005\;Gawronski2005a\;Ghosn2004\;Girvan2002a\;Gong2012\;Goodman1954\;Guimera2005\;Harary1953\;Harary1955\;Harary1957\;Harary1959\;Harary1960\;Harary1965\;Harary1968\;Harary2002\;He-Li2015\;Heider1944\;Heider1946\;Hogg2008\;Hou2005\;Huang2011\;Jalili2017\;Kaur2015\;Kernighan1970\;Khadivi2010a\;Khanafiah2004\;Knuth1994\;Kolluri2004\;Krebs2002\;Krebs2004\;Kropivnik1996\;Kulakowski2005\;Kulakowski2007\;Kunegis2009\;Kunegis2013\;Kunegis2013a\;Leskovec2010b\;Leskovec2010d\;Leskovec2014\;Li2008b\;Li2015v\;Lijphart1963\;Liu2010i\;Lu2010\;Lu2013\;Ludwig2009\;Lusseau2003a\;Luxburg2007\;Maniu2011a\;Marvel2011\;Mason2009\;Massa2004\;Massa2005\;Massa2007\;Mennes2013\;Milo2002\;Molloy1995\;Moscato1989\;Murtagh1983\;Neal2014\;Newcomb1961\;Newman2004\;Newman2004e\;Newman2006\;Newman2006b\;Newman2007a\;Norman1972\;Oda2004\;Oda2005\;Ou2007\;Ozer2016\;Pelino2012\;Pizzuti2009\;Pons2005\;Poole2011\;Radicchi2004\;Raghavan2007\;Read1954\;Reichardt2006\;Ren2009\;Resendel2005\;Richardson2009\;Rijt2011\;Roethlisberger1939\;Rosvall2008\;Rovira-Asenjo2013\;Salgado2006\;Sampson1968\;Shahriari2015\;Shahriari2016c\;Shahriary2015\;Shames2014\;Shen-Orr2002\;Shen2009\;Shwed2010\;Srinivasan2011\;Sun2013a\;Sun2013b\;Szell2010\;Szella2010\;Tang2012c\;Tang2015b\;Taylor1967\;Tomescu1973\;Traag2011\;Traag2013a\;Uitermark2012\;VanEssen2012\;Viswanath2009\;Voeten2013\;Wang2013t\;West2014\;William2010\;Wu2012\;Wu2012g\;Wu2014b\;Wu2015b\;Xiang2015b\;Yang2012g\;Yap2015\;Young1971\;Yu2003\;Zachary1977\;Zahn1964\;Zaslavsky1981\;Zaslavsky1982\;Zaslavsky1998\;Zaslavsky2008\;Zhan2017a\;Zhang2013s\;Zhang2014w\;;
+2 ExplicitGroup:Ignored\;0\;Adamic2005\;Ahmadizadeh2017\;Akiyama1981\;Al-kazemi2005\;Almendral2010\;Antal2005\;Antal2006\;Arenas2008b\;Bales1970\;Barber2007\;Batagelj2004a\;Belardo2014\;Belardo2016\;Belaza2017\;Bhatia2008\;Biswal2010\;Blondel2008\;Brandes2010\;Bron1973a\;Cartwright1956\;Chakraborty2014\;Chen2014o\;Chen2017d\;Clerc2006\;Cohen1960\;Costa2014a\;Costantini2014\;Costanzo2001\;Cucuringu2012\;Davis1967\;Deng2012a\;DevadasAcharya1980\;Doreian2017\;DuBois2009\;Duch2005\;Easley2010a\;ElMaftouhi2012\;Estrada2014b\;Facchetti2012\;Fenn2009\;Fenn2012\;Ferligoj1994\;Fisher1936\;Galam1996\;Gawronski2005\;Gawronski2005a\;Ghosn2004\;Girvan2002a\;Gong2012\;Goodman1954\;Guimera2005\;Harary1953\;Harary1955\;Harary1957\;Harary1959\;Harary1960\;Harary1965\;Harary1968\;Harary2002\;He-Li2015\;Heider1944\;Heider1946\;Hogg2008\;Hou2005\;Huang2011\;Jalili2017\;Kaur2015\;Kernighan1970\;Khadivi2010a\;Khanafiah2004\;Knuth1994\;Kolluri2004\;Krebs2002\;Krebs2004\;Kropivnik1996\;Kulakowski2005\;Kulakowski2007\;Kunegis2009\;Kunegis2013\;Kunegis2013a\;Leskovec2010b\;Leskovec2010d\;Leskovec2014\;Li2008b\;Li2015v\;Lijphart1963\;Liu2010i\;Lu2010\;Lu2013\;Ludwig2009\;Lusseau2003a\;Luxburg2007\;Maniu2011a\;Marvel2011\;Mason2009\;Massa2004\;Massa2005\;Massa2007\;Mennes2013\;Meunier2010\;Milo2002\;Molloy1995\;Moscato1989\;Murtagh1983\;Neal2014\;Newcomb1961\;Newman2004\;Newman2004e\;Newman2006\;Newman2006b\;Newman2007a\;Norman1972\;Oda2004\;Oda2005\;Ou2007\;Ozer2016\;Pelino2012\;Pizzuti2009\;Pons2005\;Poole2011\;Radicchi2004\;Raghavan2007\;Read1954\;Reichardt2006\;Ren2009\;Resendel2005\;Richardson2009\;Rijt2011\;Roethlisberger1939\;Rosvall2008\;Rovira-Asenjo2013\;Salgado2006\;Sampson1968\;Selee2007\;Shahriari2015\;Shahriari2016c\;Shahriary2015\;Shames2014\;Shen-Orr2002\;Shen2009\;Shwed2010\;Srinivasan2011\;Sun2013a\;Sun2013b\;Szell2010\;Szella2010\;Tang2012c\;Tang2015b\;Taylor1967\;Tomescu1973\;Traag2011\;Traag2013a\;Uitermark2012\;VanEssen2012\;Viswanath2009\;Voeten2013\;Wang2013t\;West2014\;William2010\;Wu2012\;Wu2012g\;Wu2014b\;Wu2015b\;Xiang2015b\;Yang2012g\;Yap2015\;Young1971\;Yu2003\;Zachary1977\;Zahn1964\;Zajonc1965\;Zaslavsky1981\;Zaslavsky1982\;Zaslavsky1998\;Zaslavsky2008\;Zhan2017a\;Zhang2013s\;Zhang2014w\;;
 }
 
 @Comment{jabref-meta: groupsversion:3;}
